src/test/ui/resolve/issue-21221-3.stderr
error[E0405]: trait `OuterTrait` is not in scope
  --> $DIR/issue-21221-3.rs:25:6
   |
25 | impl OuterTrait for Foo {}
   |      ^^^^^^^^^^ `OuterTrait` is not in scope
   |
   = help: you can import it into scope: `use issue_21221_3::outer::OuterTrait;`.

error: cannot continue compilation due to previous error

